feat: 모임 참여 취소 기능 구현